--- a/work.html
+++ b/work.html
@@ -11,13 +11,13 @@
 		
 		<link href="./app/immutable/assets/0.BnaXEIHz.css" rel="stylesheet">
 		<link href="./app/immutable/assets/5.BkBCXbhO.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.BcXF-pg1.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.0qLQdACl.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.vURXcJFy.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.x1M1rFfM.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.Bmg8oFKD.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.C0MNHLID.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.B7xlS9od.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.CpO4BYFI.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.m8KFlKS_.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/stores.CWayWlhP.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.CX21MV-f.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/stores.DM-35YxW.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/5.B2ic9er7.js">
 	</head>
 	<body>
@@ -35,7 +35,7 @@
 			
 			<script>
 				{
-					__sveltekit_6xfcwt = {
+					__sveltekit_16u77ap = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -44,8 +44,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.BcXF-pg1.js"),
-						import("./app/immutable/entry/app.C0MNHLID.js")
+						import("./app/immutable/entry/start.vURXcJFy.js"),
+						import("./app/immutable/entry/app.B7xlS9od.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
