--- a/about.html
+++ b/about.html
@@ -9,23 +9,23 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./app/immutable/assets/0.D2xmjtEd.css" rel="stylesheet">
+		<link href="./app/immutable/assets/0.BldlOsuV.css" rel="stylesheet">
 		<link href="./app/immutable/assets/3.BiGzdx12.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.BTeZvgXD.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.CJROa7zV.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.DlzLQOr0.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.DHPgHoSv.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.Bmg8oFKD.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.E7VH93U8.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.CztpSL-q.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.CpO4BYFI.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.WE8mZIy7.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/stores.CWll3I51.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.C7Nnvcpk.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/stores.CaWplBer.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/3.S8-8xevI.js">
 	</head>
 	<body>
-		<div style="display: contents">  <header style="position:fixed; z-index: 1;" data-svelte-h="svelte-19dvsis"><section class="header"><nav><div class="nav-links"><ul><li><a href="/">Home</a></li> <li class="dropdown svelte-wfhwnz"><a href="/work" class="dropbtn">My Work</a>  <ul class="dropdown-content svelte-wfhwnz"><li><a href="/work#DigitalArt" class="svelte-wfhwnz">Digital Art</a></li> <li><a href="/work#game-development" class="svelte-wfhwnz">Game Development</a></li> <li><a href="/work#3D" class="svelte-wfhwnz">3D Modelling</a></li></ul></li> <li><a href="/about">About Me</a></li> <li><a href="/contact">Contact</a></li></ul></div></nav></section></header> <main><div class="background svelte-1djlh7l" data-svelte-h="svelte-1rkqe8p"><div class="overlay"><div class="about-box svelte-1djlh7l"><a href="/"><img src="/Logo.png" alt="" class="svelte-1djlh7l"></a> <h1 class="svelte-1djlh7l">About me</h1> <h2 class="svelte-1djlh7l">My name is Elvina and I have a passion.</h2> <h2 class="svelte-1djlh7l">I grew up in a small town where video games or technologies in general weren&#39;t of much of an interest to people. Except my older sister. It is her fault I fell into the beautiful trap of video games. I still remember the first time I got my hands on such a game.. I was in love ever since.</h2> <h2 class="svelte-1djlh7l">I ended up delving into this world more and more. Oh and the stories I found. They did not just entertain me or provided me fun, no, they changed me. I think that is one of the most beautiful things that games can do. Influence and change. They stay with you. That is the kind of art I want to be a part of.</h2></div> <footer><div id="theEnd"><div class="endPage"><h2 class="svelte-1djlh7l">My contacts :3</h2> <div class="social-icons"><h2 class="svelte-1djlh7l"><a href="https://www.instagram.com/elve_exe/?hl=en" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a></h2> <h2 class="svelte-1djlh7l"><a href="https://www.linkedin.com/in/elvina-bulbenkovaitė-3a8642210/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a></h2> <h2 class="svelte-1djlh7l"><a href="mailto:elve.exe@gmail.com" target="_blank"><i class="fa-solid fa-earth-europe" style="color: #ffffff;"></i></a></h2></div></div></div></footer></div> </div> </main> 
+		<div style="display: contents">  <header style="position:fixed; z-index: 1;" data-svelte-h="svelte-19dvsis"><section class="header"><nav><div class="nav-links"><ul><li><a href="/">Home</a></li> <li class="dropdown svelte-wfhwnz"><a href="/work" class="dropbtn">My Work</a>  <ul class="dropdown-content svelte-wfhwnz"><li><a href="/work#DigitalArt" class="svelte-wfhwnz">Digital Art</a></li> <li><a href="/work#game-development" class="svelte-wfhwnz">Game Development</a></li> <li><a href="/work#3D" class="svelte-wfhwnz">3D Modelling</a></li></ul></li> <li><a href="/about">About Me</a></li> <li><a href="/contact">Contact</a></li></ul></div></nav></section></header> <main><div class="background"><div class="overlay"><div class="background svelte-1djlh7l" data-svelte-h="svelte-1rkqe8p"><div class="overlay"><div class="about-box svelte-1djlh7l"><a href="/"><img src="/Logo.png" alt="" class="svelte-1djlh7l"></a> <h1 class="svelte-1djlh7l">About me</h1> <h2 class="svelte-1djlh7l">My name is Elvina and I have a passion.</h2> <h2 class="svelte-1djlh7l">I grew up in a small town where video games or technologies in general weren&#39;t of much of an interest to people. Except my older sister. It is her fault I fell into the beautiful trap of video games. I still remember the first time I got my hands on such a game.. I was in love ever since.</h2> <h2 class="svelte-1djlh7l">I ended up delving into this world more and more. Oh and the stories I found. They did not just entertain me or provided me fun, no, they changed me. I think that is one of the most beautiful things that games can do. Influence and change. They stay with you. That is the kind of art I want to be a part of.</h2></div> <footer><div id="theEnd"><div class="endPage"><h2 class="svelte-1djlh7l">My contacts :3</h2> <div class="social-icons"><h2 class="svelte-1djlh7l"><a href="https://www.instagram.com/elve_exe/?hl=en" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a></h2> <h2 class="svelte-1djlh7l"><a href="https://www.linkedin.com/in/elvina-bulbenkovaitė-3a8642210/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a></h2> <h2 class="svelte-1djlh7l"><a href="mailto:elve.exe@gmail.com" target="_blank"><i class="fa-solid fa-earth-europe" style="color: #ffffff;"></i></a></h2></div></div></div></footer></div> </div></div></div> </main> 
 			
 			<script>
 				{
-					__sveltekit_k8bde8 = {
+					__sveltekit_10b13vf = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -34,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.BTeZvgXD.js"),
-						import("./app/immutable/entry/app.E7VH93U8.js")
+						import("./app/immutable/entry/start.DlzLQOr0.js"),
+						import("./app/immutable/entry/app.CztpSL-q.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
