--- a/contact.html
+++ b/contact.html
@@ -9,23 +9,23 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./app/immutable/assets/0.D2xmjtEd.css" rel="stylesheet">
+		<link href="./app/immutable/assets/0.BldlOsuV.css" rel="stylesheet">
 		<link href="./app/immutable/assets/4.BJ3sePWJ.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.BTeZvgXD.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.CJROa7zV.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.DlzLQOr0.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.DHPgHoSv.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.Bmg8oFKD.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.E7VH93U8.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.CztpSL-q.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.CpO4BYFI.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.WE8mZIy7.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/stores.CWll3I51.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.C7Nnvcpk.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/stores.CaWplBer.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/4.B7fUMHhZ.js">
 	</head>
 	<body>
-		<div style="display: contents">  <header style="position:fixed; z-index: 1;" data-svelte-h="svelte-19dvsis"><section class="header"><nav><div class="nav-links"><ul><li><a href="/">Home</a></li> <li class="dropdown svelte-wfhwnz"><a href="/work" class="dropbtn">My Work</a>  <ul class="dropdown-content svelte-wfhwnz"><li><a href="/work#DigitalArt" class="svelte-wfhwnz">Digital Art</a></li> <li><a href="/work#game-development" class="svelte-wfhwnz">Game Development</a></li> <li><a href="/work#3D" class="svelte-wfhwnz">3D Modelling</a></li></ul></li> <li><a href="/about">About Me</a></li> <li><a href="/contact">Contact</a></li></ul></div></nav></section></header> <main><div class="overlay" data-svelte-h="svelte-1aba3h2"><div class="background svelte-11m36a0"><div class="contacts svelte-11m36a0"><img src="/Logo.png" alt=""> <h2 class="svelte-11m36a0"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i> <a href="https://www.instagram.com/elve_exe/?hl=en" target="_blank" class="svelte-11m36a0">Elve_exe</a></h2> <h2 class="svelte-11m36a0"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i> <a href="https://www.linkedin.com/in/elvina-bulbenkovaitė-3a8642210/" target="blank" class="svelte-11m36a0">Linked-In</a></h2> <h2 class="svelte-11m36a0"><i class="fa-solid fa-earth-europe" style="color: #ffffff;"></i> <a href="mailto:elve.exe@gmail.com" target="blank" class="svelte-11m36a0">Elve.exe@gmail.com</a></h2></div></div> </div> </main> 
+		<div style="display: contents">  <header style="position:fixed; z-index: 1;" data-svelte-h="svelte-19dvsis"><section class="header"><nav><div class="nav-links"><ul><li><a href="/">Home</a></li> <li class="dropdown svelte-wfhwnz"><a href="/work" class="dropbtn">My Work</a>  <ul class="dropdown-content svelte-wfhwnz"><li><a href="/work#DigitalArt" class="svelte-wfhwnz">Digital Art</a></li> <li><a href="/work#game-development" class="svelte-wfhwnz">Game Development</a></li> <li><a href="/work#3D" class="svelte-wfhwnz">3D Modelling</a></li></ul></li> <li><a href="/about">About Me</a></li> <li><a href="/contact">Contact</a></li></ul></div></nav></section></header> <main><div class="background"><div class="overlay"><div class="overlay" data-svelte-h="svelte-1aba3h2"><div class="background svelte-11m36a0"><div class="contacts svelte-11m36a0"><img src="/Logo.png" alt=""> <h2 class="svelte-11m36a0"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i> <a href="https://www.instagram.com/elve_exe/?hl=en" target="_blank" class="svelte-11m36a0">Elve_exe</a></h2> <h2 class="svelte-11m36a0"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i> <a href="https://www.linkedin.com/in/elvina-bulbenkovaitė-3a8642210/" target="blank" class="svelte-11m36a0">Linked-In</a></h2> <h2 class="svelte-11m36a0"><i class="fa-solid fa-earth-europe" style="color: #ffffff;"></i> <a href="mailto:elve.exe@gmail.com" target="blank" class="svelte-11m36a0">Elve.exe@gmail.com</a></h2></div></div> </div></div></div> </main> 
 			
 			<script>
 				{
-					__sveltekit_k8bde8 = {
+					__sveltekit_10b13vf = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -34,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.BTeZvgXD.js"),
-						import("./app/immutable/entry/app.E7VH93U8.js")
+						import("./app/immutable/entry/start.DlzLQOr0.js"),
+						import("./app/immutable/entry/app.CztpSL-q.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
