--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./app/immutable/assets/0.D2xmjtEd.css" rel="stylesheet">
+		<link href="./app/immutable/assets/0.BldlOsuV.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.CIn0CWiW.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.BTeZvgXD.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.CJROa7zV.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.DlzLQOr0.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.DHPgHoSv.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.Bmg8oFKD.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.E7VH93U8.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.CztpSL-q.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.CpO4BYFI.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.WE8mZIy7.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/stores.CWll3I51.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.C7Nnvcpk.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/stores.CaWplBer.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/2.DIfMHxvq.js">
 	</head>
 	<body>
-		<div style="display: contents">  <header style="position:fixed; z-index: 1;" data-svelte-h="svelte-19dvsis"><section class="header"><nav><div class="nav-links"><ul><li><a href="/">Home</a></li> <li class="dropdown svelte-wfhwnz"><a href="/work" class="dropbtn">My Work</a>  <ul class="dropdown-content svelte-wfhwnz"><li><a href="/work#DigitalArt" class="svelte-wfhwnz">Digital Art</a></li> <li><a href="/work#game-development" class="svelte-wfhwnz">Game Development</a></li> <li><a href="/work#3D" class="svelte-wfhwnz">3D Modelling</a></li></ul></li> <li><a href="/about">About Me</a></li> <li><a href="/contact">Contact</a></li></ul></div></nav></section></header> <main><div class="background svelte-1qnyx78" data-svelte-h="svelte-1u4sd9b"><div class="overlay"><div class="index svelte-1qnyx78"><div class="content-wrapper"><div class="logo-container"><a href="/"><img src="/Logo.png" alt=""></a></div> <div class="text-box svelte-1qnyx78"><h1>Hi! My name is Elvina! <br> I like to develop games and make art :)</h1></div></div></div> <div class="image-rows svelte-1qnyx78"><div class="image-row-1 svelte-1qnyx78" data-sveltekit-preload-data><a href="/work#DigitalArt" class="image-box svelte-1qnyx78"><img src="/character.png" alt="This should show art :,)" class="svelte-1qnyx78"> <img src="/Witch break.png" alt="This should show art :,)" class="svelte-1qnyx78"> <img src="/wolf.png" alt="This should show art :,)" class="svelte-1qnyx78"> <h4 class="overlay-text svelte-1qnyx78">Digital Art</h4></a></div> <div class="image-row-1 svelte-1qnyx78" data-sveltekit-preload-data><a href="/work#game-development" class="image-box svelte-1qnyx78"><img src="/game.png" alt="This should show art :,)" class="svelte-1qnyx78"> <img src="/plant.png" alt="This should show art :,)" class="svelte-1qnyx78"> <img src="/paintingg.jpg" alt="This should show art :,)" class="svelte-1qnyx78"> <h4 class="overlay-text svelte-1qnyx78">Game Development</h4></a></div> <div class="image-row-1 svelte-1qnyx78" data-sveltekit-preload-data><a href="/work#3D" class="image-box svelte-1qnyx78"><img src="/3dclose.png" alt="This should show art :,)" class="svelte-1qnyx78"> <img src="/book.png" alt="This should show art :,)" class="svelte-1qnyx78"> <img src="/creature.png" alt="This should show art :,)" class="svelte-1qnyx78"> <h4 class="overlay-text svelte-1qnyx78">3D Modelling</h4></a></div></div> <footer><div id="theEnd"><div class="endPage"><h2>My contacts :3</h2> <div class="social-icons"><h2><a href="https://www.instagram.com/elve_exe/?hl=en" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a></h2> <h2><a href="https://www.linkedin.com/in/elvina-bulbenkovaitė-3a8642210/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a></h2> <h2><a href="mailto:elve.exe@gmail.com" target="_blank"><i class="fa-solid fa-earth-europe" style="color: #ffffff;"></i></a></h2></div></div></div></footer></div></div>  </main> 
+		<div style="display: contents">  <header style="position:fixed; z-index: 1;" data-svelte-h="svelte-19dvsis"><section class="header"><nav><div class="nav-links"><ul><li><a href="/">Home</a></li> <li class="dropdown svelte-wfhwnz"><a href="/work" class="dropbtn">My Work</a>  <ul class="dropdown-content svelte-wfhwnz"><li><a href="/work#DigitalArt" class="svelte-wfhwnz">Digital Art</a></li> <li><a href="/work#game-development" class="svelte-wfhwnz">Game Development</a></li> <li><a href="/work#3D" class="svelte-wfhwnz">3D Modelling</a></li></ul></li> <li><a href="/about">About Me</a></li> <li><a href="/contact">Contact</a></li></ul></div></nav></section></header> <main><div class="background"><div class="overlay"><div class="background svelte-1qnyx78" data-svelte-h="svelte-1u4sd9b"><div class="overlay"><div class="index svelte-1qnyx78"><div class="content-wrapper"><div class="logo-container"><a href="/"><img src="/Logo.png" alt=""></a></div> <div class="text-box svelte-1qnyx78"><h1>Hi! My name is Elvina! <br> I like to develop games and make art :)</h1></div></div></div> <div class="image-rows svelte-1qnyx78"><div class="image-row-1 svelte-1qnyx78" data-sveltekit-preload-data><a href="/work#DigitalArt" class="image-box svelte-1qnyx78"><img src="/character.png" alt="This should show art :,)" class="svelte-1qnyx78"> <img src="/Witch break.png" alt="This should show art :,)" class="svelte-1qnyx78"> <img src="/wolf.png" alt="This should show art :,)" class="svelte-1qnyx78"> <h4 class="overlay-text svelte-1qnyx78">Digital Art</h4></a></div> <div class="image-row-1 svelte-1qnyx78" data-sveltekit-preload-data><a href="/work#game-development" class="image-box svelte-1qnyx78"><img src="/game.png" alt="This should show art :,)" class="svelte-1qnyx78"> <img src="/plant.png" alt="This should show art :,)" class="svelte-1qnyx78"> <img src="/paintingg.jpg" alt="This should show art :,)" class="svelte-1qnyx78"> <h4 class="overlay-text svelte-1qnyx78">Game Development</h4></a></div> <div class="image-row-1 svelte-1qnyx78" data-sveltekit-preload-data><a href="/work#3D" class="image-box svelte-1qnyx78"><img src="/3dclose.png" alt="This should show art :,)" class="svelte-1qnyx78"> <img src="/book.png" alt="This should show art :,)" class="svelte-1qnyx78"> <img src="/creature.png" alt="This should show art :,)" class="svelte-1qnyx78"> <h4 class="overlay-text svelte-1qnyx78">3D Modelling</h4></a></div></div> <footer><div id="theEnd"><div class="endPage"><h2>My contacts :3</h2> <div class="social-icons"><h2><a href="https://www.instagram.com/elve_exe/?hl=en" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a></h2> <h2><a href="https://www.linkedin.com/in/elvina-bulbenkovaitė-3a8642210/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a></h2> <h2><a href="mailto:elve.exe@gmail.com" target="_blank"><i class="fa-solid fa-earth-europe" style="color: #ffffff;"></i></a></h2></div></div></div></footer></div></div> </div></div> </main> 
 			
 			<script>
 				{
-					__sveltekit_k8bde8 = {
+					__sveltekit_10b13vf = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -34,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.BTeZvgXD.js"),
-						import("./app/immutable/entry/app.E7VH93U8.js")
+						import("./app/immutable/entry/start.DlzLQOr0.js"),
+						import("./app/immutable/entry/app.CztpSL-q.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
