--- a/work.html
+++ b/work.html
@@ -11,13 +11,13 @@
 		
 		<link href="./app/immutable/assets/0.BldlOsuV.css" rel="stylesheet">
 		<link href="./app/immutable/assets/5.BkBCXbhO.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.DlzLQOr0.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.DHPgHoSv.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.D1eRoUm0.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.Y8otOp_1.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.Bmg8oFKD.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.CztpSL-q.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.DxlwRKU_.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.CpO4BYFI.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.C7Nnvcpk.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/stores.CaWplBer.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.C6dn8SDr.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/stores.CL24hlz0.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/5.DeAM3rDJ.js">
 	</head>
 	<body>
@@ -35,7 +35,7 @@
 			
 			<script>
 				{
-					__sveltekit_10b13vf = {
+					__sveltekit_1vwe9zu = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -44,8 +44,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.DlzLQOr0.js"),
-						import("./app/immutable/entry/app.CztpSL-q.js")
+						import("./app/immutable/entry/start.D1eRoUm0.js"),
+						import("./app/immutable/entry/app.DxlwRKU_.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
