--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 		
 		<link href="./app/immutable/assets/0.BldlOsuV.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.CIn0CWiW.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.D1eRoUm0.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.Y8otOp_1.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.Dl2JMpmf.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.B-UYrNQE.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.Bmg8oFKD.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.DxlwRKU_.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.BFvKxPBW.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.CpO4BYFI.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.C6dn8SDr.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/stores.CL24hlz0.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.CVhx304w.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/stores.H0uNnOKE.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/2.DIfMHxvq.js">
 	</head>
 	<body>
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_1vwe9zu = {
+					__sveltekit_gwit3r = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -34,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.D1eRoUm0.js"),
-						import("./app/immutable/entry/app.DxlwRKU_.js")
+						import("./app/immutable/entry/start.Dl2JMpmf.js"),
+						import("./app/immutable/entry/app.BFvKxPBW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
