--- a/contact.html
+++ b/contact.html
@@ -6,18 +6,18 @@
 <link href="https://fonts.googleapis.com/css2?family=Kelly+Slab&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/7de3e4d2f5.js" crossorigin="anonymous"></script>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="icon" href="./favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./app/immutable/assets/0.BldlOsuV.css" rel="stylesheet">
 		<link href="./app/immutable/assets/4.MIhqskzz.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.Dl2JMpmf.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.B-UYrNQE.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.wzEuoG_s.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.CmEQFOi3.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.Bmg8oFKD.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.BFvKxPBW.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.Fi5IlImt.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.CpO4BYFI.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.CVhx304w.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/stores.H0uNnOKE.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.CYR2dWuc.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/stores.DHM04wXS.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/4.CeAUoicD.js">
 	</head>
 	<body>
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_gwit3r = {
+					__sveltekit_fqlu7n = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -34,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.Dl2JMpmf.js"),
-						import("./app/immutable/entry/app.BFvKxPBW.js")
+						import("./app/immutable/entry/start.wzEuoG_s.js"),
+						import("./app/immutable/entry/app.Fi5IlImt.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
